force-app/main/default/objects/Consent__c/Consent__c.object-meta.xml
<CustomObject>
    <description>记录 authorize / decline / withdraw 事件、MyInfo 返回数据、有效期与匹配结果</description>
    <label>Consent Record</label>
    <nameField>
        <displayFormat>CNS-{00000}</displayFormat>
        <label>Consent No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consent Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>