force-app/main/default/objects/Consent__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>动作类型</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consent Given</fullName>
            </value>
            <value>
                <fullName>Consent Withdrawn</fullName>
            </value>
            <value>
                <fullName>Consent Declined</fullName>
            </value>
            <value>
                <fullName>Consent Expired</fullName>
            </value>
            <value>
                <fullName>Consent Revoked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>