force-app/main/default/objects/Consent__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>归档标记</label>
    <type>Checkbox</type>
</CustomField>