force-app/main/default/objects/Consent__c/fields/Consent_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent到期日</label>
    <type>Date</type>
</CustomField>