force-app/main/default/objects/Consent__c/fields/Consent_Granted_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Granted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consent Granted Date</label>
    <type>DateTime</type>
</CustomField>