force-app/main/default/objects/Consent__c/fields/Consent_Request_Item__c.field-meta.xml
<CustomField>
    <fullName>Consent_Request_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consent Request Item</label>
    <referenceTo>Consent_Request_Item__c</referenceTo>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>