force-app/main/default/objects/Consent__c/fields/Eform_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Eform_File_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>E-form文件ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>