force-app/main/default/objects/Consent__c/fields/Encryption_Status__c.field-meta.xml
<CustomField>
    <fullName>Encryption_Status__c</fullName>
    <label>加密状态</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Encrypted</fullName>
            </value>
            <value>
                <fullName>Encrypted</fullName>
            </value>
            <value>
                <fullName>Decrypted</fullName>
            </value>
            <value>
                <fullName>Encryption Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>