force-app/main/default/objects/Consent__c/fields/Match_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Match_Failure_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>匹配失败原因</label>
    <length>255</length>
    <type>Text</type>
</CustomField>