force-app/main/default/objects/Consent__c/fields/Matched_By_ID_DOB__c.field-meta.xml
<CustomField>
    <fullName>Matched_By_ID_DOB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>是否按ID+DOB匹配</label>
    <type>Checkbox</type>
</CustomField>