force-app/main/default/objects/Consent__c/fields/MyInfo_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>MyInfo_Date_of_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MyInfo出生日期</label>
    <type>Date</type>
</CustomField>