force-app/main/default/objects/Consent__c/fields/MyInfo_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>MyInfo_ID_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MyInfo证件号码</label>
    <length>50</length>
    <type>Text</type>
</CustomField>