force-app/main/default/objects/Consent__c/fields/MyInfo_Name__c.field-meta.xml
<CustomField>
    <fullName>MyInfo_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MyInfo姓名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>