force-app/main/default/objects/Consent__c/fields/MyInfo_Nationality__c.field-meta.xml
<CustomField>
    <fullName>MyInfo_Nationality__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MyInfo国籍</label>
    <length>100</length>
    <type>Text</type>
</CustomField>