force-app/main/default/objects/Consent__c/fields/MyInfo_Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>MyInfo_Residential_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MyInfo居住地址</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>