force-app/main/default/objects/Consent__c/fields/Report_Use_Count__c.field-meta.xml
<CustomField>
    <fullName>Report_Use_Count__c</fullName>
    <label>Report Use Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>