force-app/main/default/objects/Consent__c/fields/Retention_Until__c.field-meta.xml
<CustomField>
    <fullName>Retention_Until__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>保留至</label>
    <type>Date</type>
</CustomField>