force-app/main/default/objects/Consent__c/fields/Revoked_At__c.field-meta.xml
<CustomField>
    <fullName>Revoked_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>撤回时间</label>
    <type>DateTime</type>
</CustomField>