force-app/main/default/objects/Consent__c/fields/Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Submitted_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>提交时间</label>
    <type>DateTime</type>
</CustomField>