force-app/main/default/objects/Consent__c/fields/Withdrawal_By__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Withdrawal By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Withdrawal Consents</relationshipLabel>
    <relationshipName>Withdrawal_Consents</relationshipName>
    <type>Lookup</type>
</CustomField>