force-app/main/default/objects/Consent__c/fields/Withdrawal_Channel__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Channel__c</fullName>
    <label>Withdrawal Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Subject Singpass</fullName>
                <default>true</default>
                <label>Data Subject (Singpass)</label>
            </value>
            <value>
                <fullName>Client on behalf</fullName>
                <label>Client on Behalf</label>
            </value>
            <value>
                <fullName>Admin correction</fullName>
                <label>Admin Correction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>