force-app/main/default/objects/Consent__c/fields/Withdrawn_By_Client__c.field-meta.xml
<CustomField>
    <fullName>Withdrawn_By_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>客户代撤回标记</label>
    <type>Checkbox</type>
</CustomField>