force-app/main/default/objects/Consent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Data_Subject__c</columns>
    <columns>Consent_Status__c</columns>
    <columns>Consent_Expiry_Date__c</columns>
    <columns>MyInfo_Name__c</columns>
    <columns>MyInfo_ID_Number__c</columns>
    <columns>MyInfo_Nationality__c</columns>
    <columns>Revoked_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>